2004-10-11 Bart Hakvoort  <gparted@users.sf.net>

	* src/Win_GParted.cc: i just can't stop tweaking the operationslist =)

2004-10-11 Bart Hakvoort  <gparted@users.sf.net>

	* src/Device.cc (Read_Disk_Layout): logic unallocated space wasn't read correctly, fixed.
	* include/Win_GParted.h: added open_operationslist() and menu_view_operations() .
	* src/Win_GParted.cc: tweaked operationlist behaviour a bit. Also added 'Operations" toggle-item to View menu.

2004-10-11 Bart Hakvoort  <gparted@users.sf.net>

	* src/Device.cc (Read_Disk_Layout): Again =) Decided to use switch ( blahblah ) instead of if else statements.

2004-10-11 Bart Hakvoort  <gparted@users.sf.net>

	* src/Device.cc (Read_Disk_Layout): some internal codechanges. Looks a bit cleaner now.

2004-10-11 Bart Hakvoort  <gparted@users.sf.net>

	* include/Device.h,
	  src/Device.cc: made 'deep-scan' optional in Read_Disk_Layout. Removed obsolete (already) commented function.
	* include/Partition.h,
	  src/Partition.cc: Took used sectors out of Set() and added a Set_Used() function instead. Also added Reset() .
	* src/Dialog_Partition_New.cc: minor change to make use of the new Set() in Partition..
	* include/Win_GParted.h,
	  src/Win_GParted.cc: show pulsing progressbar while refreshing devices.

2004-10-08 Bart Hakvoort  <gparted@users.sf.net>

	* src/Partition.cc: changed color of reiserfs from blue to purple highlight. + some cosmetics.

2004-10-08 Bart Hakvoort  <gparted@users.sf.net>

	* include/Frame_Resizer_Base.h: removed inheritance from sigc::trackable. (this is already done by Glib::Object)
	* src/Dialog_Partition_Copy.cc,
	  src/Frame_Resizer_Base.cc: fixed issues with resizing reiserfs filesystems.

2004-10-08 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_About.cc: updated translatorcomment.

2004-10-08 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_Base_Partition.cc,
	  src/Dialog_Partition_Resize_Move.cc: fixed some resizing-issues with reiserfs.
