@@ -1,3 +1,11 @@
+2004-10-14 Bart Hakvoort  <gparted@users.sf.net>
+
+	* include/Operation.h,
+	  src/Operation.h: minor (code) change in displaying errormessage. Made Apply_Resize_Move_Extended_To_Visual() a bit more
+	  readable (and thus debugable). This whole class could still use a soft, caring hand though :P
+	* src/Device.cc: Unallocate space < 1MB wasn't filtered out. fixed.
+	* src/Partition.cc (Set_Used): Unused wasn't set properly. fixed. 
+
 2004-10-11 Bart Hakvoort  <gparted@users.sf.net>
 
 	* src/Win_GParted.cc: i just can't stop tweaking the operationslist =)
